tests/ui/associated-type.stderr
error: typetag trait with associated type is not supported yet
 --> tests/ui/associated-type.rs:3:5
  |
1 | #[typetag::serde]
  | ----------------- in this procedural macro expansion
2 | pub trait Trait {
3 |     type Assoc;
  |     ^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `typetag::serde` (in Nightly builds, run with -Z macro-backtrace for more info)
